cmake_minimum_required(VERSION 3.10)
project(dungeon VERSION 0.1)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
file(GLOB SOURCES "src/*.c")
add_executable(dungeon ${SOURCES})
target_include_directories(dungeon PUBLIC ${PROJECT_BINARY_DIR})
add_subdirectory(./deps/raylib)
target_link_libraries(dungeon PRIVATE raylib)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    target_link_libraries(dungeon PRIVATE glfw m pthread)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    target_link_libraries(dungeon PRIVATE opengl32 gdi32)
endif()
file(COPY res/ DESTINATION ${EXECUTABLE_OUTPUT_PATH}/res)
